--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.12",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.14.0",
+    "firebase": "^12.1.0",
     "next": "15.4.6",
-    "postcss": "^8.5.6",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^4.1.12"
+    "react-quill-new": "^3.6.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.4.6",
+    "postcss": "^8.5.6",
+    "prisma": "^6.14.0",
+    "tailwindcss": "^3.4.17"
   }
 }
