--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.14.0",
+    "cloudinary": "^2.7.0",
     "firebase": "^12.1.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-quill-new": "^3.6.0",
